# lads-client-py

./: .gitignore  README.md  requirements.txt
dev/: build_and_install.sh
lads_opcua_client/: pyproject.toml
lads_opcua_client/src/lads_opcua_client/: main.py
lads_opcua_viewer/: pyproject.toml
lads_opcua_viewer/src/lads_opcua_viewer/: main.py
tests/: test_main.py
