[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lads-opcua-client"
version = "0.1.0"
dependencies = [
  "pandas>=2.2.2",
  "asyncua>=1.1.5",
  "typing_extensions>=4.12.2",
]
requires-python = ">=3.12"
authors = [
  { name = "Dr. Mathias Arnold", email = "m.arnold@aixengineers.de" },
  { name = "Dr. Ricardo Cunha", email = "cunha@iuta.de" },
  { name = "Muhammad Hamad-Ul-Hassan", email = "hamadibrahimkhel@gmail.com" }
]
maintainers = [
  { name = "Dr. Mathias Arnold", email = "m.arnold@aixengineers.de" }
]
description = "A python client for LADS OPC UA Server"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/opcua-lads/lads-client-py"
Issues = "https://github.com/opcua-lads/lads-client-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lads_opcua_client"]
