[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lads-opcua-viewer"
version = "0.0.1"
dependencies = [
  "lads-opcua-client>=0.0.1",
  "streamlit>=1.43.2",
  "pandas>=2.2.2",
  "plotly>=5.22.0",
  "asyncua>=1.1.5",
  "matplotlib>=3.9.0",
  "typing_extensions>=4.12.2",
]
requires-python = ">=3.6"
authors = [
  { name = "Dr. Mathias Arnold", email = "m.arnold@aixengineers.de" },
  { name = "Dr. Ricardo Cunha", email = "cunha@iuta.de" },
  { name = "Muhammad Hamad-Ul-Hassan", email = "hamadibrahimkhel@gmail.com" }
]
maintainers = [
  { name = "Dr. Mathias Arnold", email = "m.arnold@aixengineers.de" }
]
description = "A Streamlit Viewer for LADS OPC UA Servers"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/opcua-lads/lads-client-py"
Issues = "https://github.com/opcua-lads/lads-client-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lads_opcua_viewer"]

[project.scripts]
lads_opcua_viewer = "lads_opcua_viewer.cli:main"
